# lammps-mdi

./: .gitignore  HISTORY.md  INSTALL.md  LICENSE  LICENSE~  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: BranchCI.yaml  CI.yaml  CodeQL.yaml  Release.yaml
src/lammps_mdi/: __init__.py  cli.py  cuda_utils.py  mace_mdi.py
src/lammps_mdi/scripts/: cpu_bind.sh  gpu_bind.sh  mdi_bind.sh  mdi_monitor.sh
tests/: test_basic.py
